other/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-webapp
spec:
  containers:
    - name: my-webapp
      image: rajendrait99/web:latest
