other/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-exporter
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31090
      protocol: TCP
  selector:
    app: "my-exporter"
